# empire

./: .gitignore  Cargo.toml  README.md  fly.toml
client/: Cargo.toml  Dockerfile  fly.toml  wasm.sh
client/src/: components.rs  helper.rs  main.rs
client/src/network/: desktop_network.rs  general_network.rs  wasm_network.rs
client/src/systems/: cursor_position_system.rs  deserialize_map_system.rs  deserialize_player_info_system.rs  map_system.rs  mod.rs  mouse_input_system.rs  move_camera_system.rs  request_info_system.rs
client/src/systems/ui_system/: attack_ui.rs  build_city_ui.rs  buildings_ui.rs  info_ui.rs  mod.rs  username_ui.rs
client/wasm/: index.html
common/: Cargo.toml
common/src/: common_structure.rs  lib.rs
server/: .dockerignore  Cargo.toml  Dockerfile
server/src/: component.rs  left_walker_system.rs  main.rs  map.json  map.rs
server/src/network/: message.rs  sockets.rs
server/src/systems/: attack_system.rs  build_system.rs  defeat_system.rs  gold_generation_system.rs  mod.rs  new_city_system.rs  ongoing_attack_system.rs  online_player_system.rs  player_info_json_system.rs  player_info_system.rs  resources_generation_system.rs  send_map_system.rs  territory_stat_system.rs
