[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.9.0"
uuid = { version = "0.7", features = ["v4"] }
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
bevy_egui = "0.18"
common = {package = "sumer-common", path = "../common"}




[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy = "0.9.0"
websocket = "0.24.0"