[package]
name = "sumer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.91"
serde= { version = "^1.0.91", features = ["derive"] }
bevy = "0.9.0"
specs = { version = "0.16.1" }
specs-derive = "0.4.1"

