[package]
name = "sumer-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "^1.0.91"
serde= { version = "^1.0.91", features = ["derive"] }
specs = { version = "0.16.1" }
specs-derive = "0.4.1"
serde_with = "3.0.0"

[dependencies.bevy]
version = "0.9.0"
default-features = false

