[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = { version = "0.8.0" }
specs = { version = "0.16.1" }
specs-derive = "0.4.1"
ws = "0.8.0"
uuid = { version = "0.7", features = ["v4"] }
serde_json = "^1.0.44"
serde = { version = "^1.0.44", features = ["derive"] }
common = {package = "sumer-common", path = "../common"}

[target.'cfg(any(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3", features=["console"] }
wasm-bindgen = "0.2.58"
